# sk-rust-docker

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  app.yaml  build-tag-push-ecs.py  default.conf  docker-compose.yml  domain.crt  domain.rsa  fixup-yaml.sh  nginx.conf  start_rocket_with_nginx.sh  steps_to_deploy_on_ecs.txt
src/: main.rs
