[package]
name = "sk-rust-docker"
version = "0.1.0"
authors = ["sulabhk <sulabh.kothari@deserve.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
rocket_oauth2="0.3.0"
#diesel = { version = "1.0.0", features = ["postgres"] }
#dotenv = "0.9.0"
#r2d2-diesel = "1.0.0"
#r2d2 = "0.8.8"
#serde = { version = "1.0", features = ["derive"] }
#serde_derive = "1.0"
#serde_json = "1.0"

#[dependencies.rocket_contrib]
#version = "0.4.4"
#default-features = false
#features = ["postgres_pool","json","diesel_postgres_pool"]